--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6890,9 +6890,10 @@ textarea.form-control-lg {
   background-color: RGBA(255, 193, 7, var(--bs-bg-opacity, 1)) !important;
 }
 
+/*COR DA HEADER */
 .text-bg-danger {
   color: #fff !important;
-  background-color: RGBA(220, 53, 69, var(--bs-bg-opacity, 1)) !important;
+  background-color: RGBA(255, 117, 24, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-light {
