Mudanças de cor

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3096,21 +3096,22 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: #ffc107;
 }
 
+/* COR DO BOTÃO LOGIN */
 .btn-danger {
   --bs-btn-color: #fff;
-  --bs-btn-bg: #dc3545;
-  --bs-btn-border-color: #dc3545;
+  --bs-btn-bg: #ff7518;
+  --bs-btn-border-color: #ff7518;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #bb2d3b;
-  --bs-btn-hover-border-color: #b02a37;
+  --bs-btn-hover-bg: #ff7518;
+  --bs-btn-hover-border-color: #ff7518;
   --bs-btn-focus-shadow-rgb: 225, 83, 97;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #b02a37;
-  --bs-btn-active-border-color: #a52834;
+  --bs-btn-active-bg: #ff7518;
+  --bs-btn-active-border-color: #ff7518;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #dc3545;
-  --bs-btn-disabled-border-color: #dc3545;
+  --bs-btn-disabled-bg: #ff7518;
+  --bs-btn-disabled-border-color: #ff7518;
 }
 
 .btn-light {
