--- a/css/sign-in.css
+++ b/css/sign-in.css
@@ -8,7 +8,7 @@ body {
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #ff00009e;
+  background-color: #ff7518;
 }
 
 .form-signin {
