--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3099,19 +3099,19 @@ textarea.form-control-lg {
 /* COR DO BOTÃO LOGIN */
 .btn-danger {
   --bs-btn-color: #fff;
-  --bs-btn-bg: #ff7518;
-  --bs-btn-border-color: #ff7518;
+  --bs-btn-bg: #FF914D;
+  --bs-btn-border-color: #FF914D;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #ff7518;
-  --bs-btn-hover-border-color: #ff7518;
+  --bs-btn-hover-bg: #FF914D;
+  --bs-btn-hover-border-color: #FF914D;
   --bs-btn-focus-shadow-rgb: 225, 83, 97;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #ff7518;
-  --bs-btn-active-border-color: #ff7518;
+  --bs-btn-active-bg: #FF914D;
+  --bs-btn-active-border-color: #FF914D;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #ff7518;
-  --bs-btn-disabled-border-color: #ff7518;
+  --bs-btn-disabled-bg: #FF914D;
+  --bs-btn-disabled-border-color: #FF914D;
 }
 
 .btn-light {
@@ -6894,7 +6894,7 @@ textarea.form-control-lg {
 /*COR DA HEADER */
 .text-bg-danger {
   color: #fff !important;
-  background-color: RGBA(255, 117, 24, var(--bs-bg-opacity, 1)) !important;
+  background-color: RGBA(255, 145, 77, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-light {
