--- a/css/style1.css
+++ b/css/style1.css
@@ -24,7 +24,7 @@ body {
 }
 
 .form-image {
-    width: 40%;
+    width: 45%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -33,11 +33,11 @@ body {
 }
 
 .form-image img {
-    width: 27rem;
+    width: 31rem;
 }
 
 .form {
-    width: 60%;
+    width: 55%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -47,7 +47,7 @@ body {
 }
 
 .form-header {
-    margin-bottom: 1rem;
+    margin-bottom: 3rem;
     display: flex;
     justify-content: space-between;
 }
@@ -61,7 +61,7 @@ body {
 .back-button button {
     border: none;
     background-color: #2a1e5c;
-    padding: 0.5rem 2rem;
+    padding: 0.4rem 1rem;
     border-radius: 5px;
     cursor: pointer;
 }
@@ -76,25 +76,38 @@ body {
     color: #fff;
 }
 
+.form-header h1::after {
+    content: '';
+    display: block;
+    width: 5rem;
+    height: 0.3rem;
+    background-color: #2a1e5c;
+    margin: 0 auto;
+    position: absolute;
+    border-radius: 10px;
+}
+
 .input-group {
     display: flex;
     flex-wrap: wrap;
     justify-content: left;
-    padding: 0.5rem 0;
+    padding: 1rem 0;
 }
+
+/* MUDA O ESPAÇO ENTRE ELES */
 
 .input-box {
     display: flex;
     flex-direction: column;
-    margin-bottom: 1.1rem;
+    margin-bottom: 1rem;
 }
 
 .input-box input {
-    margin: 0.9rem 0.9rem;
-    padding: 0.8em 2.5rem;
+    margin: 0.6rem 0;
+    padding: 0.8em 1.2rem;
     border: none;
     border-radius: 10px;
-    box-shadow: 1px 1px 6px #6026ff4b;
+    box-shadow: 1px 1px 6px #6026ff77;
     font-size: 0.8rem;
 }
 
@@ -106,13 +119,6 @@ body {
     outline: 1px solid #2a1e5c;
 }
 
-.input-box label,
-.gender-title h6 {
-    font-size: 0.75rem;
-    font-weight: 600;
-    color: #000000c0;
-}
-
 .input-box input::placeholder {
     color: #000000be;
 }
@@ -122,7 +128,7 @@ body {
 .species-group {
     display: -webkit-inline-flex;
     justify-content: space-around;
-    margin-top: 0.62rem;
+    margin-top: 0.5rem;
     padding: 0.3rem 0.3rem;
     
 }
@@ -142,6 +148,7 @@ body {
     color: #000000c0;
 }
 
+/* CONTINUAR */
 
 .continue-button button {
     width: 100%;
@@ -164,41 +171,4 @@ body {
     color: #fff;
 }
 
-@media screen and (max-width: 1330px) {
-    .form-image {
-        display: none;
-    }
-    .container {
-        width: 50%;
-    }
-    .form {
-        width: 100%;
-    }
-}
 
-@media screen and (max-width: 1064px) {
-    .container {
-        width: 90%;
-        height: auto;
-    }
-    .species-group {
-        flex-direction: column;
-        z-index: 5;
-        padding-right: 5rem;
-        max-height: 10rem;
-        overflow-y: scroll;
-        flex-wrap: nowrap;
-    }
-    .species-inputs {
-        margin-top: 2rem;
-    }
-    .species-group {
-        flex-direction: row;
-    }
-    .species-title h6 {
-        margin: 0;
-    }
-    .species-input {
-        margin-top: 0.5rem;
-    }
-}
